--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </div>
         </div>
         <div class="container-fluid">
-          <div class="row">
-            <div class="col-7">
+          <div class="row justify-content-center">
+            <div class="col-lg-7 col-sm-10 order-1">
               <h3 class="top-rate">TOP RATED</h3>
               <div class="container-fluid  con-2">
                 <div class="swiper mySwiper2 al-swiper">
@@ -58,9 +58,11 @@
                 </div>
                 </div>
             </div>
-            <div class="col-5 p-2">
+            <div class="col-lg-5 col-sm-10 order-2 p-2">
               <div class="announcment">
-                <h3>ANNOUCEMENT</h3>
+                <div class="row justify-content-center ">
+                  <div class="col-5"><h3>ANNOUCEMENT</h3></div>
+                </div>
               </div>
             </div>
           </div>
@@ -77,7 +79,7 @@
 
   <!-- Initialize Swiper -->
   <script>
-    var swiper = new Swiper(".mySwiper", {
+    var swiper = new Swiper(".mySwiper2", {
       slidesPerView: 2,
       spaceBetween: 20,
       freeMode: true,
@@ -88,8 +90,10 @@
     });
   </script>
   <script>
-    var swiper = new Swiper(".mySwiper2", {
-      slidesPerView: 2 ,
+    const mediaQuery = window.matchMedia('(max-width: 760px)')
+    if (mediaQuery.matches){
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 1 ,
       spaceBetween: 20,
       freeMode: true,
       pagination: {
@@ -97,6 +101,18 @@
         clickable: true,
       },
     });
+  }
+  else {
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 2,
+      spaceBetween: 20,
+      freeMode: true,
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+    });
+  }
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
