--- a/places/wayanad.html
+++ b/places/wayanad.html
@@ -15,7 +15,7 @@
 <body>
     <section class="hero" >
         <div class="image-container">
-            <img src="/assets/wayanad.png" alt="">
+            <img src="./assets/wayanad.png" alt="">
             <div class="cover-white"></div>
             <h3>WAYANAD</h3>
         </div>
